created home component

--- a/src/app/modules/company/components/company-list/company-list.component.html
+++ b/src/app/modules/company/components/company-list/company-list.component.html
@@ -1,3 +1,48 @@
 <div>
-	<table mat-table [dataSource]="companyList" class="mat-elevetation-z8"></table>
+	<div>
+		<a mat-raised-button color="primary" (click)="openPopup('')" style="margin: 2%">Create New</a>
+	</div>
+	<table mat-table [dataSource]="companyList" class="mat-elevetation-z8">
+		<ng-container matColumnDef="id">
+			<th mat-header-cell *matHeaderCellDef>ID</th>
+			<td mat-cell *matCellDef="let element">{{ element.id }}</td>
+		</ng-container>
+
+		<ng-container matColumnDef="name">
+			<th mat-header-cell *matHeaderCellDef>Name</th>
+			<td mat-cell *matCellDef="let element">{{ element.name }}</td>
+		</ng-container>
+
+		<ng-container matColumnDef="empcount">
+			<th mat-header-cell *matHeaderCellDef>Empcount</th>
+			<td mat-cell *matCellDef="let element">{{ element.empcount }}</td>
+		</ng-container>
+
+		<ng-container matColumnDef="revenue">
+			<th mat-header-cell *matHeaderCellDef>Revenue</th>
+			<td mat-cell *matCellDef="let element">{{ element.revenue }}</td>
+		</ng-container>
+
+		<ng-container matColumnDef="address">
+			<th mat-header-cell *matHeaderCellDef>Address</th>
+			<td mat-cell *matCellDef="let element">{{ element.address }}</td>
+		</ng-container>
+
+		<ng-container matColumnDef="isActive">
+			<th mat-header-cell *matHeaderCellDef>Active</th>
+			<td mat-cell *matCellDef="let element">{{ element.isActive }}</td>
+		</ng-container>
+
+		<ng-container matColumnDef="action">
+			<th mat-header-cell *matHeaderCellDef>Action</th>
+			<td mat-cell *matCellDef="let element">
+				<div>
+					<a mat-raised-button color="primary">Edit</a>
+					<a mat-raised-button color="accent">Delete</a>
+				</div>
+			</td>
+		</ng-container>
+		<tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
+		<tr mat-row *matRowDef="let row; columns: displayColumns"></tr>
+	</table>
 </div>
